# rust-portfolio

./: .gitignore  README.md
arc-mutex/: Cargo.toml  README.md
arc-mutex/src/: arc_example.rs  deadlock.rs  mutex_example.rs
freqs/: Cargo.toml  README.md
freqs/src/: config.rs  main.rs
mini-language/src/: main.rs
pfact/: Cargo.toml  README.md
pfact/src/: config.rs  fork_join.rs  lib.rs  main.rs
pfact/tests/: cli.rs
psum/: Cargo.toml  README.md
psum/src/: config.rs  lib.rs  main.rs
psum/tests/: cli.rs  integers2.txt  rnd_integers.txt
sending-frames/: Cargo.toml
stress/: Cargo.toml  Dockerfile  README.md
stress/src/: config.rs  main.rs
wcr/: Cargo.toml
wcr/src/: config.rs  error.rs  lib.rs  main.rs
